[gd_scene load_steps=25 format=3 uid="uid://dm1scwgu5jng6"]

[ext_resource type="Texture2D" uid="uid://bf3ka6bdjsfe6" path="res://Sprites/Characters/MrFox.png" id="1_fqke6"]
[ext_resource type="Script" path="res://Scripts/Customer.gd" id="1_wp8yv"]
[ext_resource type="Texture2D" uid="uid://b0rfe0rojemk1" path="res://Sprites/Cafe/Items/GreenTea.png" id="4_r6y7b"]
[ext_resource type="Texture2D" uid="uid://bprybq0fqviap" path="res://Sprites/Cafe/Items/CoffeeMugFull.png" id="5_xfndn"]
[ext_resource type="Texture2D" uid="uid://bejdeiio67hjx" path="res://Sprites/Cafe/Items/Muffin_1.png" id="6_3junw"]
[ext_resource type="FontFile" uid="uid://shmhr4ivriiv" path="res://PixelRPG.ttf" id="7_7m6ed"]
[ext_resource type="Texture2D" uid="uid://bb7ax3421dt18" path="res://Sprites/Cafe/Items/Muffin_2.png" id="7_utbds"]

[sub_resource type="Gradient" id="Gradient_t3dls"]
offsets = PackedFloat32Array(0.0135593)
colors = PackedColorArray(0.85098, 0.827451, 0.85098, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ofplr"]
gradient = SubResource("Gradient_t3dls")

[sub_resource type="Shader" id="Shader_bfhi4"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int intensity : hint_range(0,400); 
uniform float precision : hint_range(0,0.02);
uniform vec4 outline_color : source_color;

varying vec2 o;
varying vec2 f;

void vertex()
{
	o = VERTEX;
	vec2 uv = (UV - 0.5);
	VERTEX += uv * float(intensity);
	f = VERTEX;
}

void fragment()
{
	ivec2 t = textureSize(TEXTURE, 0);
	vec2 regular_uv;
	regular_uv.x = UV.x + (f.x - o.x)/float(t.x);
	regular_uv.y = UV.y + (f.y - o.y)/float(t.y);
	
	vec4 regular_color = texture(TEXTURE, regular_uv);
	if((regular_uv.x < 0.0 || regular_uv.x > 1.0) || (regular_uv.y < 0.0 || regular_uv.y > 1.0) || regular_color.a <=0.25){
		regular_color = vec4(0.0); 
	}
	
	vec2 ps = TEXTURE_PIXEL_SIZE * float(intensity) * precision;
	
	vec4 final_color = regular_color;
	if (regular_color.a <= 0.0)
	{
		for(int x = -1; x <= 1; x += 1){
			for(int y = -1; y <= 1; y += 1){
				//Get the X and Y offset from this
				if (x==0 && y==0)
					continue;
					
				vec2 outline_uv = regular_uv + vec2(float(x) * ps.x, float(y) * ps.y); 
				
				//Sample here, if we are out of bounds then fail
				vec4 outline_sample = texture(TEXTURE, outline_uv);
				if((outline_uv.x < 0.0 || outline_uv.x > 1.0) || (outline_uv.y < 0.0 || outline_uv.y > 1.0)){
					//We aren't a real color
					outline_sample = vec4(0);
				}
				
				//Is our sample empty? Is there something nearby?
				if(outline_sample.a > final_color.a){
					final_color = outline_color;
				}
			}
		}
	}
	COLOR = final_color; 
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhftl"]
shader = SubResource("Shader_bfhi4")
shader_parameter/intensity = 24
shader_parameter/precision = 0.02
shader_parameter/outline_color = Color(0.164706, 0.12549, 0.164706, 1)

[sub_resource type="Curve" id="Curve_fembo"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vdw4b"]
curve = SubResource("Curve_fembo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bp4nm"]
lifetime_randomness = 0.17
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 15, 5)
gravity = Vector3(0, -100, 0)
linear_accel_max = 19.11
radial_accel_min = 16.56
radial_accel_max = 54.78
radial_accel_curve = SubResource("CurveTexture_vdw4b")
tangential_accel_min = -86.62
tangential_accel_max = 22.93
scale_min = 0.2
scale_max = 0.2

[sub_resource type="Gradient" id="Gradient_gh1xv"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.737255, 0.745098, 0.737255, 0.243137)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m6am4"]
gradient = SubResource("Gradient_gh1xv")

[sub_resource type="Theme" id="Theme_gjwob"]
default_font = ExtResource("7_7m6ed")
default_font_size = 18

[sub_resource type="Animation" id="Animation_5un1l"]
resource_name = "Chill"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_1asra"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_y2pte"]
resource_name = "Open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBubble:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(2.47656, 1.61061), Vector2(1.79688, 1.16858)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(-76.25, -55.0933), Vector2(-154.75, -106.145), Vector2(-133, -92)]
}

[sub_resource type="Animation" id="Animation_p0gqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBubble/Items:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.12644e-20, -0.640015)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.79688, 1.16858)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpeechBubble:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-133, -92)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_u7vtf"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -25), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_swnce"]
resource_name = "speech_float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBubble/Items:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.12644e-20, -0.640015), Vector2(0, 3.42296), Vector2(1.12644e-20, -0.640015)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vqvqw"]
_data = {
"Chill": SubResource("Animation_5un1l"),
"Jump": SubResource("Animation_1asra"),
"Open": SubResource("Animation_y2pte"),
"RESET": SubResource("Animation_p0gqf"),
"Walk": SubResource("Animation_u7vtf"),
"speech_float": SubResource("Animation_swnce")
}

[node name="Customer" type="Node2D"]
script = ExtResource("1_wp8yv")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(14, 14)
texture = ExtResource("1_fqke6")
flip_h = true

[node name="SpeechTimer" type="Timer" parent="."]
wait_time = 0.09

[node name="SpeechBubble" type="Sprite2D" parent="."]
position = Vector2(-133, -92)
scale = Vector2(1.79688, 1.16858)
texture = SubResource("GradientTexture2D_ofplr")

[node name="Items" type="Node2D" parent="SpeechBubble"]
position = Vector2(1.12644e-20, -0.640015)
scale = Vector2(5.81818, 8.96)

[node name="GreenTeaFull" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
texture = ExtResource("4_r6y7b")

[node name="CoffeeMugFull" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
position = Vector2(-4.76837e-07, 9.53674e-07)
texture = ExtResource("5_xfndn")

[node name="Muffin1" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
position = Vector2(-4.76837e-07, 9.53674e-07)
texture = ExtResource("6_3junw")

[node name="Muffin2" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
position = Vector2(-4.76837e-07, 9.53674e-07)
texture = ExtResource("7_utbds")

[node name="Muffin1Cooked" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
texture = ExtResource("6_3junw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="SpeechBubble/Items/Muffin1Cooked"]
position = Vector2(-0.5, -4.33929)
process_material = SubResource("ParticleProcessMaterial_bp4nm")
texture = SubResource("GradientTexture2D_m6am4")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.18

[node name="Muffin2Cooked" type="Sprite2D" parent="SpeechBubble/Items"]
visible = false
material = SubResource("ShaderMaterial_yhftl")
texture = ExtResource("7_utbds")

[node name="GPUParticles2D" type="GPUParticles2D" parent="SpeechBubble/Items/Muffin2Cooked"]
position = Vector2(-0.5, -4.33929)
process_material = SubResource("ParticleProcessMaterial_bp4nm")
texture = SubResource("GradientTexture2D_m6am4")
preprocess = 50.3
speed_scale = 0.8
explosiveness = 0.18

[node name="SpeechBubble2" type="Sprite2D" parent="SpeechBubble"]
position = Vector2(35.7, 25.92)
scale = Vector2(0.120653, 0.189817)
texture = SubResource("GradientTexture2D_ofplr")

[node name="SpeechLabel" type="Label" parent="."]
z_index = 2
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -129.0
offset_right = -76.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gjwob")
theme_override_colors/font_color = Color(0.211765, 0.215686, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vqvqw")
}
autoplay = "Walk"

[connection signal="timeout" from="SpeechTimer" to="." method="_on_speech_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
